# tagit

./: .gitignore  README.md  clean_all.sh  install_dependencies_linux.sh  install_dependencies_macos.sh  install_dependencies_windows.cmd
backend/: CMakeLists.txt  build.cmd  build.sh  clean.sh
backend/app/: CMakeLists.txt  GreeterServiceImpl.cc  GreeterServiceImpl.h  main.cc
frontend/: build.sh  clean.sh  client.py
frontend/console-cpp/: .clang-format  .gitignore  CMakeLists.txt  build.sh  clean.sh
frontend/console-cpp/app/: CMakeLists.txt  main.cc
frontend/console-python/: build.sh  client.py
